# QtBot

./: .gitignore  QtBot.pro  README.md  gatewayopcodes.h  settings.ini  style.astylerc
bot/: bot.cpp  bot.h  bot.pri  bot.pro  databasedriver.cpp  databasedriver.h  entitymanager.cpp  entitymanager.h  eventhandler.cpp  eventhandler.h  gateway.cpp  gateway.h  globals.h  httpclient.cpp  httpclient.h  jsonutils.cpp  jsonutils.h  main.cpp  readme.txt  settings.cpp  settings.h  settings.ini  typefactory.h
bot/botjob/: bindingfactory.cpp  bindingfactory.h  botjob.cpp  botjob.h  botscript.cpp  botscript.h  commandbinding.cpp  commandbinding.h  commandbindingproperties.h  corecommand.h  (+30 more)
docs/: Doxyfile
installer/: installer.pro
lib/: .gitignore
lib/gumbo-parser/: CMakeLists.txt
mock/: QtWebsocketServer.pro  echoserver.cpp  echoserver.h  gatewaypayload.h  globals.h  heartbeat.h  hello.h  jsonserializeable.h  jsonserializer.cpp  jsonserializer.h  main.cpp  mock.pro
scripts/: hello.qml  http.js  quotebot.qml  quotebot.sql  rr.qml  ud.qml  util.js
src/: bot.cc  bot.cpp  bot.h  eventservice.cpp  eventservice.h  gatewayconnection.cc  gatewayconnection.cpp  gatewayconnection.h  gatewayservice.cpp  gatewayservice.h  globals.h  jsonserializeable.h  jsonserializer.cc  jsonserializer.cpp  jsonserializer.h  lockingqueue.h  loggingservice.cpp  loggingservice.h  main.cc  main.cpp  messagehandler.cc  messagehandler.cpp  messagehandler.h  settingsservice.cpp  settingsservice.h
test/: test.pro  testmain.cpp  tests.h  testsuite.cpp  testsuite.h  tst_hello.cpp
website/: .gitignore
(+414 files in other folders)
